Add gradle.build that works